pornstar and pornstar-individual pages: fixed images stretching, sort by dropdown issue

--- a/feelXVideo/pornstar/css/pornstar.scss
+++ b/feelXVideo/pornstar/css/pornstar.scss
@@ -120,10 +120,8 @@
 
       .card-header {
         position: relative;
-
-        .card-img-top {
-          max-height: 410px;
-        }
+        max-height: 410px;
+        overflow: hidden;
 
         .card-text {
           position: absolute;
